[project]
name = "server-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "requests>=2.32.5",
    "rknn-toolkit-lite2>=2.3.2",
    "streamlit>=1.54.0",
    "transformers>=5.0.0",
]
