[project]
name = "rkllama-server"
version = "1.1.0"
description = "Openai compatible fastapi server for rkllm"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.1",
    "numpy>=2.2.6",
    "opencv-python>=4.13.0.90",
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "rknn-toolkit-lite2>=2.3.2",
    "streamlit>=1.54.0",
    "transformers>=5.0.0",
    "uvicorn>=0.40.0",
]
